🔧 Updated file paths for JReleaser artifact and Maven build output directory
The JReleaser artifact file paths have been updated to reflect the new package structure. Similarly, the output directory for Maven build has also been updated to match the new package structure.

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -30,11 +30,9 @@ release:
           - 'GitHub'
 files:
   active: ALWAYS
-  artifacts:
-    - path: target/staging-deploy/bom.xml
-    - path: target/staging-deploy/bom.json
   globs:
     - pattern: target/*.buildinfo
+    - pattern: target/**/*cyclonedx.json
 signing:
   active: ALWAYS
   armored: true
