--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -276,6 +276,21 @@
             <artifactId>maven-deploy-plugin</artifactId>
             <version>3.1.1</version>
           </plugin>
+          <plugin>
+            <groupId>io.github.chains-project</groupId>
+            <artifactId>maven-lockfile</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+              <includeMavenPlugins>true</includeMavenPlugins>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>validate</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
       </build>
     </profile>
