📝 Update Documentation with current version

--- a/github_action/pom.xml
+++ b/github_action/pom.xml
@@ -106,8 +106,7 @@
         <executions>
           <execution>
             <configuration>
-              <scripts>
-              </scripts>
+              <scripts></scripts>
             </configuration>
           </execution>
         </executions>
