--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -32,7 +32,7 @@ files:
   active: ALWAYS
   globs:
     - pattern: target/*.buildinfo
-    - pattern: target/**/*cyclonedx.json
+    - pattern: target/staging-deploy/**/*cyclonedx.json
 signing:
   active: ALWAYS
   armored: true
@@ -42,6 +42,7 @@ deploy:
       maven-central:
         active: ALWAYS
         url: https://s01.oss.sonatype.org/service/local
+        snapshotUrl: https://s01.oss.sonatype.org/content/repositories/snapshots/
         closeRepository: true
         releaseRepository: true
         stagingRepositories:
