--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -4,14 +4,21 @@
   <parent>
     <groupId>io.github.chains-project</groupId>
     <artifactId>maven-lockfile-parent</artifactId>
-    <version>3.3.1-SNAPSHOT</version>
+    <version>3.4.1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
   <groupId>io.github.chains-project</groupId>
   <artifactId>maven-lockfile</artifactId>
-  <version>3.3.1-SNAPSHOT</version>
+  <version>3.4.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>maven-lockfile-plugin</name>
+  <description>This plugin is a state-of-the-art solution that can be used to validate the integrity
+    of a maven repository.
+    It does this by generating a lock file that contains the checksums of all the artifacts in the
+    repository.
+    The lock file can then be used to validate the integrity of the repository.
+    This guards the supply chain against malicious actors that might tamper with the artifacts in
+    the repository.</description>
   <url>https://github.com/chains-project/maven-lockfile</url>
   <prerequisites>
     <maven>${mavenVersion}</maven>
