🛠️ Adjust qodana.yml file
This commit removes CheckDependencyLicenses inspection from the ExcludedInspections group and adds it to the include list. JavadocReference inspection severity level changed from ERROR to WARNING. Additionally, an include block was added to the file.

--- a/qodana.yml
+++ b/qodana.yml
@@ -18,7 +18,6 @@ groups:
       - UseOfClone
       - UnstableApiUsage
 inspections:
-  - name: CheckDependencyLicenses
   - group: ExcludedInspections
     enabled: false
   - group: IncludedPaths
@@ -37,3 +36,5 @@ inspections:
       - "scope#file:buildSrc/*"
   - inspection: JavadocReference
     severity: WARNING # It has default ERROR severity. It's understandable for unresolved references in javadocs for editor but not on CI.
+include:
+  - name: CheckDependencyLicenses
