--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
   ],
   "semanticCommitType": ":arrow_up:",
   "semanticCommits": true,
-  "gitIgnoredAuthors" : [
+  "gitIgnoredAuthors": [
     "41898282+github-actions[bot]@users.noreply.github.com",
     "github-actions[bot]@users.noreply.github.com"
   ],
@@ -21,7 +21,7 @@
       ],
       "automerge": true,
       "automergeType": "pr",
-      "automergeStrategy" : "squash",
+      "automergeStrategy": "squash",
       "semanticCommitType": ":arrow_up:"
     },
     {
@@ -30,20 +30,32 @@
         "pin",
         "pinDigest"
       ],
-      "semanticCommitType": ":pushpin:"
+      "semanticCommitType": ":pushpin:",
+      "automerge": true,
+      "automergeType": "pr",
+      "automergeStrategy": "squash"
     },
     {
       "updateTypes": [
         "rollback"
       ],
-      "semanticCommitType": ":arrow_down:"
+      "semanticCommitType": ":arrow_down:",
+      "automerge": true,
+      "automergeType": "pr",
+      "automergeStrategy": "squash"
     },
     {
       "updateTypes": [
         "digest",
         "bump"
       ],
-      "semanticCommitType": ":bookmark:"
+      "semanticCommitType": ":bookmark:",
+      "automerge": true,
+      "automergeType": "pr",
+      "automergeStrategy": "squash"
     }
+  ],
+  "ignoreDeps": [
+    "maven-core"
   ]
 }
