--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,8 @@
     "41898282+github-actions[bot]@users.noreply.github.com",
     "github-actions[bot]@users.noreply.github.com"
   ],
-  "onboarding": true,
+  "semanticCommitType": ":arrow_up:",
+  "semanticCommits": true,
   "packageRules": [
     {
       "matchUpdateTypes": [
