--- a/.github/workflows/qodana-cloud.yml
+++ b/.github/workflows/qodana-cloud.yml
@@ -1,25 +1,35 @@
-name: Code-Quality
+# Workflow for testing spoon code quality.
+#
+# Note that actions are specified by commit hash. This is to avoid the security
+# risk of someone injecting malicious code into a release and then simply
+# changing a tag.
+
+name: Qodana-Cloud-Scan
 on:
-  push:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
+  pull_request:
     branches:
       - main
+
 permissions:
   contents: read
 jobs:
   qodana:
     runs-on: ubuntu-latest
     permissions:
-      actions: read
-      contents: read
-      security-events: write
+      contents: write
+      pull-requests: write
+      checks: write
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
-        with:
-          fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@77f0ff0c702065648df9fd0340a48919dca5a1ff # v2023.2.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-      - uses: github/codeql-action/upload-sarif@a09933a12a80f87b87005513f0abb1494c27a716 # v2
         with:
-          sarif_file: ${{ runner.temp }}/qodana/results/qodana.sarif.json
+          pr-mode: false
+          args: --apply-fixes
+          push-fixes: pull-request
+
