--- a/.github/workflows/qodana-cloud.yml
+++ b/.github/workflows/qodana-cloud.yml
@@ -30,6 +30,6 @@ jobs:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
         with:
           pr-mode: false
-          args: --apply-fixes
+          args: --apply-fixes, -l,jetbrains/qodana-jvm:2023.2
           push-fixes: pull-request
 
