--- a/.github/workflows/qodana-cloud.yml
+++ b/.github/workflows/qodana-cloud.yml
@@ -1,25 +1,29 @@
-name: Code-Quality
+name: Qodana-Cloud-Scan
 on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
   push:
     branches:
       - main
+
 permissions:
   contents: read
 jobs:
   qodana:
     runs-on: ubuntu-latest
     permissions:
-      actions: read
-      contents: read
-      security-events: write
+      contents: write
+      pull-requests: write
+      checks: write
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
-        with:
-          fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@77f0ff0c702065648df9fd0340a48919dca5a1ff # v2023.2.1
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
-      - uses: github/codeql-action/upload-sarif@00e563ead9f72a8461b24876bee2d0c2e8bd2ee8 # v2
         with:
-          sarif_file: ${{ runner.temp }}/qodana/results/qodana.sarif.json
+          pr-mode: false
+          args: --apply-fixes, -l,jetbrains/qodana-jvm:2023.2
+          push-fixes: pull-request
+
