--- a/template/action.yml
+++ b/template/action.yml
@@ -42,6 +42,7 @@ runs:
         fetch-depth: 0
         ref: ${{ github.event.pull_request.head.ref }}
         repository: ${{github.event.pull_request.head.repo.full_name}}
+        token: ${{ inputs.github-token }}
     - name: Set up Maven
       uses: stCarolas/setup-maven@07fbbe97d97ef44336b7382563d66743297e442f # v4.5
       with:
