--- a/.github/workflows/code-qualitiy.yml
+++ b/.github/workflows/code-qualitiy.yml
@@ -41,6 +41,8 @@ jobs:
         with:
           args: "--fail-threshold,0"
           pr-mode: false
+          exclude: 
+            - name: UnstableApiUsage     
       - uses: github/codeql-action/upload-sarif@1b1aada464948af03b950897e5eb522f92603cc2 # v3
         with:
           sarif_file: ${{ runner.temp }}/qodana/results/qodana.sarif.json
