Add nullable problems to excluded inspections

--- a/qodana.yml
+++ b/qodana.yml
@@ -16,6 +16,7 @@ groups:
       - JavadocBlankLines # Questionable. Spam on mockito, RxJava and other projects.
       - UseOfClone
       - UnstableApiUsage
+      - NullableProblems
 exclude:
   - name: UnstableApiUsage
 inspections:
