chore: only CD from main

--- a/.github/workflows/publish-action-artifact.yml
+++ b/.github/workflows/publish-action-artifact.yml
@@ -1,8 +1,8 @@
-name: Publish action artifact to GitHub project's Maven repository
+name: Publish action artifact to GitHub Maven package
 
 on:
   workflow_dispatch:
-  pull_request:
+  push:
     branches:
       - main
 permissions:
