--- a/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/withoutEnvironment/pom.xml
+++ b/maven_plugin/src/test/resources-its/it/IntegrationTestsIT/withoutEnvironment/pom.xml
@@ -39,12 +39,12 @@
         <executions>
           <execution>
             <goals>
-              <goal>validate</goal>
+              <goal>generate</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
-          <includeEnvironment>true</includeEnvironment>
+          <includeEnvironment>false</includeEnvironment>
         </configuration>
       </plugin>
     </plugins>
