--- a/.github/workflows/LockfilePR.yml
+++ b/.github/workflows/LockfilePR.yml
@@ -1,9 +1,6 @@
 name: Lockfile
 on:
   pull_request:
-  push:
-    branches:
-      - main
 
 permissions:
   contents: read
@@ -13,8 +10,8 @@ jobs:
           contents: write
         runs-on: ubuntu-latest
         steps:
-        - name: run maven-lockfile - commit lockfile
-          if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        - name: run maven-lockfile
+          if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
           uses: chains-project/maven-lockfile@6572b9abec75a66b669cc6d432bdaf0ec25a92e3 # v5.0.0
           with:
             github-token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
@@ -22,7 +19,7 @@ jobs:
             commit-lockfile: true
 
         - name: run maven-lockfile - verify lockfile
-          if: ${{ github.event_name == 'pull_request' }}
+          if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
           uses: chains-project/maven-lockfile@6572b9abec75a66b669cc6d432bdaf0ec25a92e3 # v5.0.0
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
