--- a/.github/workflows/LockfilePR.yml
+++ b/.github/workflows/LockfilePR.yml
@@ -24,4 +24,4 @@ jobs:
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
             include-maven-plugins: true
-            commit-lockfile: false
+            commit-lockfile: true
