--- a/action.yml
+++ b/action.yml
@@ -52,12 +52,13 @@ runs:
       shell: bash
 
 
-    - name: Get all changed pom.xml file(s)
+    - name: Get all changed pom.xml and lockfile.json file(s)
       id: changed-files
       uses: tj-actions/changed-files@48d8f15b2aaa3d255ca5af3eba4870f807ce6b3c # v45
       with:
         files: |
               **/pom.xml
+              **/lockfile.json
               **/${{ inputs.workflow-filename}}
     - name: print all changed files
       run: echo all changed files are ${{ steps.changed-files.outputs.all_changed_files }}
