--- a/maven_plugin/pom.xml
+++ b/maven_plugin/pom.xml
@@ -151,8 +151,8 @@
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.15.1</version>
         <configuration>
-          <!-- see http://jira.codehaus.org/browse/MNG-5346 -->
-          <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+          <!-- see https://issues.apache.org/jira/browse/MNG-5346 -->
+          <goalPrefix>configurator</goalPrefix>
         </configuration>
         <executions>
           <execution>
