--- a/.github/workflows/LockfilePR.yml
+++ b/.github/workflows/LockfilePR.yml
@@ -6,20 +6,23 @@ permissions:
   contents: read
 jobs:
   check-lockfile:
-        permissions:
-          contents: write
-        runs-on: ubuntu-latest
-        steps:
-        - name: run maven-lockfile
-          if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-          uses: chains-project/maven-lockfile@526cd67327ab19c7bd95be6d2d16530d80bf3c9e # v5.2.0
-          with:
-            github-token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
-            include-maven-plugins: true
-
-        - name: run maven-lockfile (fork/external)
-          if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
-          uses: chains-project/maven-lockfile@526cd67327ab19c7bd95be6d2d16530d80bf3c9e # v5.2.0
-          with:
-            github-token: ${{ secrets.GITHUB_TOKEN }}
-            include-maven-plugins: true
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    steps:
+    - uses: step-security/harden-runner@446798f8213ac2e75931c1b0769676d927801858 # v2.10.0
+      with:
+        egress-policy: audit
+    - name: run maven-lockfile
+      if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+      uses: chains-project/maven-lockfile@526cd67327ab19c7bd95be6d2d16530d80bf3c9e # v5.2.0
+      with:
+        github-token: ${{ secrets.JRELEASER_GITHUB_TOKEN }}
+        include-maven-plugins: true
+  
+    - name: run maven-lockfile (fork/external)
+      if: ${{ github.event.pull_request.head.repo.full_name != github.repository }}
+      uses: chains-project/maven-lockfile@526cd67327ab19c7bd95be6d2d16530d80bf3c9e # v5.2.0
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        include-maven-plugins: true
