--- a/.github/workflows/publish-action-artifact.yml
+++ b/.github/workflows/publish-action-artifact.yml
@@ -23,7 +23,7 @@ jobs:
           allowed-endpoints: >
             github.com:443
             maven.pkg.github.com:443
-
+            repo.maven.apache.org:443
 
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
