--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -14,8 +14,8 @@ on:
           - patch
 
 jobs:
-
   build:
+    name: Build and release
     runs-on: ubuntu-latest
     steps:
       - uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
@@ -128,7 +128,7 @@ jobs:
         uses: lewagon/wait-on-check-action@ccfb013c15c8afb7bf2b7c028fb74dc5a068cccc # v1.3.4
         with:
           ref: ${{ env.BRANCH_NAME }}
-          running-workflow-name: Release
+          running-workflow-name: 'Build and release'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
       - name: Merge Fast Forward
