--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -29,7 +29,7 @@ jobs:
         uses: stCarolas/setup-maven@d6af6abeda15e98926a57b5aa970a96bb37f97d1 # v5
         with:
           maven-version: 3.9.6
-      - name: Generate Readme+action.yml
+      - name: Generate action.yml
         run: mvn generate-resources resources:copy-resources -q
       - name: Run Maven Spotless
         run: mvn spotless:apply
