--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -63,7 +63,7 @@ jobs:
         if: ${{ github.event.inputs.version == 'major'  || github.event.inputs.version == 'minor' }}
         run: echo "NEXT_VERSION=$(semver next ${{ github.event.inputs.version }} $CURRENT_VERSION)" >> $GITHUB_ENV
       - name: run maven-lockfile
-        uses: chains-project/maven-lockfile@526cd67327ab19c7bd95be6d2d16530d80bf3c9e # v5.2.0
+        uses: chains-project/maven-lockfile@611060d93984a0a72c1c895eab39c13b09852d4c # v5.3.0
         with:
             github-token: ${{ secrets.GITHUB_TOKEN }}
             include-maven-plugins: true
@@ -126,29 +126,13 @@ jobs:
           git commit -am "🔖 Setting SNAPSHOT version ${{ env.NEXT_RELEASE_VERSION }}"
           git push --set-upstream origin ${{ env.BRANCH_NAME }}
       - name: Merge Fast Forward
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git checkout main
           git merge --ff-only ${{ env.BRANCH_NAME }}
-      - name: Attempt Push with Retry
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RETRY_MAX_TIME: 600
-          RETRY_INTERVAL: 10
-        run: |
-          gh pr create --base main --head ${{ env.BRANCH_NAME }} --title "Release ${{ env.BRANCH_NAME }} ff-merge" --body "Release ${{ env.BRANCH_NAME }} ff-merge"
-
-          START_TIME=$(date +%s)
-          while true; do
-            git push origin main && break
-            ELAPSED_TIME=$(( $(date +%s) - START_TIME ))
-            if [ "$ELAPSED_TIME" -ge $RETRY_MAX_TIME ]; then
-              echo "Push failed after $RETRY_MAX_TIME seconds. Exiting..."
-              exit 1
-            fi
-
-            echo "Push failed. Retrying in $RETRY_INTERVAL seconds..."
-            sleep $RETRY_INTERVAL
-          done
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+          git push origin main
 # Log failure:
       - name: JReleaser release output
         if: always()
