Use full path to jbang

--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -46,4 +46,4 @@ jobs:
         shell: bash
       - name: SmokeTest
         run: |
-          jbang .github/smoketest/SmokeTest.java
+          ~/.jbang/bin/jbang .github/smoketest/SmokeTest.java
